--- a/g2/Code/Lamazon.WebApp/appsettings.json
+++ b/g2/Code/Lamazon.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "connectionStrings": {
-    "LamazonDbConnection": "Server=D3JAN;Database=LamazonDb;Integrated Security=True;"
+    "LamazonDbConnection": "Server=POMPEII00\\SQLEXPRESS;Database=LamazonDb;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
