--- a/g2/Code/Lamazon.WebApp/Lamazon.WebApp.csproj
+++ b/g2/Code/Lamazon.WebApp/Lamazon.WebApp.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Lamazon.DataAccess\Lamazon.DataAccess.csproj" />
+    <ProjectReference Include="..\Lamazon.Services\Lamazon.Services.csproj" />
   </ItemGroup>
 
 </Project>
