--- a/g3/SEDC.Lamazon/WebApplication/appsettings.json
+++ b/g3/SEDC.Lamazon/WebApplication/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "AppSettings": {
+    "LamazonDbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=LamazonDb;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Warning"
