repositories and dbcontext finished

--- a/g3/SEDC.Lamazon/WebApplication/appsettings.json
+++ b/g3/SEDC.Lamazon/WebApplication/appsettings.json
@@ -1,6 +1,6 @@
 {
   "AppSettings": {
-    "LamazonDbConnectionString": "Server=(localdb)\\MSSQLLocalDB;Database=LamazonDb;Trusted_Connection=True"
+    "LamazonDbContext": "Server=(localdb)\\MSSQLLocalDB;Database=LamazonDb;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
