Refactored code and configured IdentityManager

--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/SEDC.Lazamazon.Web.csproj
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/SEDC.Lazamazon.Web.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\SEDC.Lamazon.DataAccess\SEDC.Lamazon.DataAccess.csproj" />
+    <ProjectReference Include="..\SEDC.Lamazon.Services\SEDC.Lamazon.Services.csproj" />
   </ItemGroup>
 
 </Project>
