--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/appsettings.json
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/appsettings.json
@@ -1,6 +1,6 @@
 {
-  "connectionStrings": {
-    "LamazonDbConnection": "Server=(localdb)\\MSSQLLocalDB; Database=LamazonDb; Trusted_Connection=True"
+  "AppSettings": {
+    "LamazonDbConnectionString": "Server=.; Database=LamazonDb; Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
