--- a/g2/Code/Lamazon.Services/Lamazon.Services.csproj
+++ b/g2/Code/Lamazon.Services/Lamazon.Services.csproj
@@ -5,6 +5,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="7.0.1" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Lamazon.DataAccess\Lamazon.DataAccess.csproj" />
     <ProjectReference Include="..\Lamazon.Domain\Lamazon.Domain.csproj" />
     <ProjectReference Include="..\Lamazon.WebModels\Lamazon.WebModels.csproj" />
