--- a/g3/workshop/SEDC.Football/SEDC.Football.DataLayer/SEDC.Football.DataLayer.csproj
+++ b/g3/workshop/SEDC.Football/SEDC.Football.DataLayer/SEDC.Football.DataLayer.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="2.1.11" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="2.1.11" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\SEDC.Football.Domain\SEDC.Football.Domain.csproj" />
   </ItemGroup>
 
