--- a/g3/workshop/SEDC.Football/SEDC.Football.WebApplication/appsettings.json
+++ b/g3/workshop/SEDC.Football/SEDC.Football.WebApplication/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "ConnectionStrings" {
+  "ConnectionStrings": {
     "Default": "Server=(localdb)\\MSSQLLocalDB;Database=LamazonDb;Trusted_Connection=True"
   },
   "Logging": {
