Add missing features

--- a/g2/Code/Lamazon.WebApp/appsettings.json
+++ b/g2/Code/Lamazon.WebApp/appsettings.json
@@ -1,6 +1,6 @@
 {
   "connectionStrings": {
-    "LamazonDbConnection": "Server=(localdb)\\MSSQLLocalDB;Database=LamazonDb_g2;Integrated Security=True;"
+    "LamazonDbConnection": "Server=SKL-TEMP20\\SQLEXPRESS;Database=LamazonDb;Integrated Security=True;"
   },
   "Logging": {
     "LogLevel": {
