--- a/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/SEDC.Lazamazon.Web.csproj
+++ b/g1/LamazonApp/SEDC.LamazonApp/SEDC.Lazamazon.Web/SEDC.Lazamazon.Web.csproj
@@ -10,6 +10,9 @@
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.9" />
     <PackageReference Include="NToastNotify" Version="5.0.8" />
+    <PackageReference Include="Serilog" Version="2.8.0" />
+    <PackageReference Include="Serilog.AspNetCore" Version="2.1.1" />
+    <PackageReference Include="Serilog.Sinks.RollingFile" Version="3.3.0" />
   </ItemGroup>
 
   <ItemGroup>
